@@ -1,3 +1,7 @@
+2011-01-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added possibility to retrieve values from node attributes in XML data
+
 2010-12-13  Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added support for rich-text fields, resolves #11344
